--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "vite": "^5.4.9",
+    "vite-plugin-dts": "^4.5.0",
     "vue-tsc": "^2.1.6"
   }
 }
