--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,8 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "module": "./dist/martelo-vue-core.js",
+  "types": "./dist/main.d.ts",
+  "files": ["dist"],
+
   "scripts": {
-    "dev": "vite",
+    "dev": "vite build --watch",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
