--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "module": "./dist/martelo-vue-core.js",
-  "types": "./dist/main.d.ts",
+  "types": "./dist/index.d.ts",
   "files": ["dist"],
 
   "scripts": {
