--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@martelo-vue/core": "^0.0.0",
     "@vitejs/plugin-vue": "^5.1.4",
+    "cypress": "^14.0.3",
     "vite": "^5.4.9",
     "vue-tsc": "^2.1.6"
   }
