--- a/apps/devtools-extension/manifest.json
+++ b/apps/devtools-extension/manifest.json
@@ -6,5 +6,11 @@
     "action": {
       "default_popup": "hello.html",
       "default_icon": "icon.png"
-    }
+    },
+    "content_scripts": [
+        {
+            "js": ["scripts/content.js"],
+            "matches": ["<all_urls>"]
+        }
+    ]
   }
