[devtools-extension] using es6 modules in service workers

--- a/apps/devtools-extension/manifest.json
+++ b/apps/devtools-extension/manifest.json
@@ -14,6 +14,7 @@
         }
     ],
     "background": {
-        "service_worker": "workers/background.js"
+        "service_worker": "workers/background.js",
+        "type": "module"
     }
   }
