--- a/apps/devtools-extension/manifest.json
+++ b/apps/devtools-extension/manifest.json
@@ -3,7 +3,7 @@
     "description": "Martelo Devtools Extension",
     "version": "1.0",
     "manifest_version": 3,
-    "permissions": ["activeTab", "scripting"],
+    "permissions": ["activeTab", "scripting", "storage"],
     "action": {
       "default_icon": "icon.png"
     },
