--- a/apps/devtools-extension/manifest.json
+++ b/apps/devtools-extension/manifest.json
@@ -7,6 +7,7 @@
     "action": {
       "default_icon": "icon.png"
     },
+    "devtools_page": "devtools.html",
     "content_scripts": [
         {
             "js": ["scripts/content.js"],
