--- a/apps/devtools-extension/manifest.json
+++ b/apps/devtools-extension/manifest.json
@@ -7,7 +7,7 @@
     "action": {
       "default_icon": "icon.png"
     },
-    "devtools_page": "devtools.html",
+    "devtools_page": "devtools/devtools.html",
     "host_permissions": [
             "https://*/*",
             "http://*/*"
